fix mouse events on invisible text

--- a/styles/Welcome.module.scss
+++ b/styles/Welcome.module.scss
@@ -3,6 +3,7 @@
 .Welcome {
   position: relative;
   height: 80vh;
+  pointer-events: none;
 }
 
 .Text {
